2002-10-27  KUBO Takehiro  <kubo@jiubao.org>

	* sample/gnome-canvas.rb: adapt sample to Ruby/GnomeCanvas2.

2002-09-29  KUBO Takehiro  <kubo@jiubao.org>

	* src/rbart.h, src/rbart_affine.c: add prefix to exported functions.
	(get|make)_art_affine -> rbart_(get|make)_art_affine.

2002-09-28  KUBO Takehiro  <kubo@jiubao.org>

	* src/rbart_affine.c: Art::Affine.point() now accepts an array
	as a coordinate point. add an alias inverse for invert. add an
	alias inverse! for inverse. add aliases call, [] and act for point.
	* src/rbart.c, src/rbart.h: pass module name as an argument
	to reduce exported symbols.

2002-09-21  KUBO Takehiro  <kubo@jiubao.org>

	* extconf.rb, src/rbart.c: Use libart2-config instead of libart-config.
	Rename library name from libart to libart2.

2002-09-01  Masao Mutoh <mutoh@highway.ne.jp>

	* src/Makefile: Remove file.

2002-08-06  Masao Mutoh <mutoh@highway.ne.jp>

	* Makefile: Remove file. (Noticed by  KUBO Takehiro  <kubo@jiubao.org>)

2002-08-06  KUBO Takehiro  <kubo@jiubao.org>

	* sample/gnome-canvas.rb: Modify libart sample.

2002-08-05  Masao Mutoh <mutoh@highway.ne.jp>

	* Modify documents. add CVS.

2002-08-04  KUBO Takehiro  <kubo@jiubao.org>

	* extconf.rb, src/rbart.c, src/rbart.h, src/rbart_affine.c,
	sample/gnome-canvas.rb: New files.