@@ -33,7 +33,7 @@ Install
 Copying
 -------
 
-    Copyright (c) 2002 Ruby-GNOME Project Team
+    Copyright (c) 2002 Ruby-GNOME2 Project Team
 
     This program is free software.
     You can distribute/modify this program under the terms of
