@@ -1,3 +1,7 @@
+2002-11-05  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* sample/gnome-canvas.rb: Follow Ruby/GTK2 changes.
+
 2002-10-27  KUBO Takehiro  <kubo@jiubao.org>
 
 	* sample/gnome-canvas.rb: adapt sample to Ruby/GnomeCanvas2.
